Fixed Responsiveness Issue
The issue was that when the title was long the resolutions dropdown would overlap the download video button. Its fixed.

--- a/static/style.css
+++ b/static/style.css
@@ -158,7 +158,7 @@ select:hover {
 @media (max-width: 768px) {
   .bubble-box {
     width: 90%;
-    height: 700px;
+    height: 750px;
   }
 
   .bubble-box ._thumbnail {
@@ -169,16 +169,15 @@ select:hover {
     align-items: stretch;
   }
 
-  .search_btn, .audio_download_btn, .download_button, select {
+  .search_btn, .audio_download_btn, .download_button{
       width: 100%;
-      margin-top: 30px;
   }
 
   #resolutions {
-    position: absolute;
     left: 50%; /* Move it to the center */
-    top: 80%;  /* Keep it at 60% from the top */
+    top: 90%;  /* Keep it at 60% from the top */
     transform: translateX(-50%); /* Center the element */
+    width: 100%;
     max-width: 350px;
   }
 }
